[package]
name = "nlock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cairo-rs = "0.21.2"
chrono = "0.4.42"
nix = { version = "0.30.1", features = [ "fs", "mman", "process" ] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = [ "client", "staging" ] }
