[package]
name = "nlock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atomic_enum = "0.3.0"
cairo-rs = { version = "0.21.2", features = [ "png" ] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = [ "derive" ] }
config = "0.15.18"
dirs = "6.0.0"
gdk-pixbuf = "0.21.5"
mio = { version = "1.1.1", features = [ "os-ext", "os-poll" ] }
nix = { version = "0.30.1", features = [ "event", "fs", "mman", "process", "time" ] }
pam-rs = "0.9.2"
serde = { version = "1.0.228", features = [ "derive" ] }
tokio = { version = "1.48.0", features = [ "macros", "rt-multi-thread", "sync" ] }
tokio-macros = "2.6.0"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uzers = "0.12.1"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = [ "client", "staging" ] }
xkbcommon = "0.9.0"
zeroize = "1.8.2"
